# StarCap

./: Beam.h  BeamWeapon.h  CMakeLists.txt  COMShip.h  Collision.cpp  Collision.h  Explore.h  Game.cpp  Game.h  GameSprite.cpp  GameSprite.h  Menu.cpp  Menu.h  Planet.cpp  Planet.h  Projectile.h  ProjectileWeapon.h  Ship.cpp  Ship.h  Shootable.h  System.cpp  System.h  Task.h  Weapon.h  main.cpp  readme.txt
data/: Systems.txt
data/Gui/: filter.xcf  fleet_target_tracker.xcf  planetDialog.xcf  space.xcf  target_cicle.xcf  unexplored.xcf
data/Ship Names/: Abstract Nouns.txt  Adjectives.txt  Animals.txt  Endless Sky Names.txt  Female Names.txt  Female Titles.txt  Gender Neutral Titles.txt  Male Names.txt  Male Titles.txt  Nouns.txt  Numbers.txt  Spacecraft Names.txt
data/Sounds/: warp.aup
data/Sounds/warp_data/e08/d08/: e0808b81.au
data/licenses/: license1.txt
